# splitmoney

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: pages.yml
assets/: example-import.csv  interaction.js  main-dxh2328b179ba35399.css  main-dxhbf4d565f147369c.css  main.css  manifest-dxha2a677d738d844d.json  manifest.json  manifest.webmanifest  service-worker.js  splitmoney-dxh1342a724146a50dc.js  splitmoney-dxh2f11905ba6c5560.js  splitmoney-dxhb65146ca7751324c.js  splitmoney-dxhf99ba17c9bfc17fb.js  splitmoney-dxhffff8afaea6f645.js  splitmoney_bg-dxh2522f2366e3ba141.wasm  splitmoney_bg-dxh38e955fa12bd9553.wasm  splitmoney_bg-dxh5fc3e1a569e7fb9.wasm  splitmoney_bg-dxh80c587a375f9792.wasm  splitmoney_bg-dxh8d66e5aab3a671a8.wasm  sw-register-dxh4e056d80c691bb.js  sw-register.js
src/: app.rs  csv.rs  currencies.rs  main.rs  pwa.rs  state.rs  storage.rs
src/ui/: screens.rs
