[package]
name = "splitmoney"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
dioxus = { version = "0.7.3", features = ["web"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["js", "v4", "fast-rng", "serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "Storage",
    "Url",
    "Window",
] }
